Coverity analysis defect 133991: Uninitialized scalar field

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Security 2022-10-31
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/crypto/fle_crypto.h:1356: UNINIT_CTOR 133991 Class member declaration for "payloadId".
      /src/mongo/crypto/fle_crypto.cpp:3211: UNINIT_CTOR 133991 Non-static class member "payloadId" is not initialized in this constructor nor in any functions that it calls.
      /src/mongo/crypto/fle_crypto.h:1358: UNINIT_CTOR 133991 Class member declaration for "maxCounter".
      /src/mongo/crypto/fle_crypto.cpp:3211: UNINIT_CTOR 133991 Non-static class member "maxCounter" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Shreyas Kalyan (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: