SERVER-70590 Coverity analysis defect 133991: Uninitialized scalar field